# Raytracing-with-Python

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
utils/: camera.py  color.py  hittable.py  hittableList.py  image.py  interval.py  material.py  point.py  ray.py  sphere.py  utilities.py  vector.py
